tests/render/golden/platform-policy/openbao_cilium.io_v2_ciliumnetworkpolicy_platform.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  name: platform
  namespace: openbao
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEntities:
    - kube-apiserver
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cert-manager
    toPorts:
    - ports:
      - port: "8443"
        protocol: TCP
